--- a/package.json
+++ b/package.json
@@ -18,15 +18,15 @@
   },
   "homepage": "https://github.com/huriellopes/buscaCep#readme",
   "devDependencies": {
-    "gulp": "^4.0.2"
-  },
-  "dependencies": {
-    "axios": "^0.19.2",
     "browser-sync": "^2.26.7",
-    "bulma": "^0.8.0",
+    "gulp": "^3.9.1",
     "gulp-clean-css": "^4.2.0",
     "gulp-concat": "^2.6.1",
     "gulp-minify": "^3.1.0",
     "gulp-sass": "^4.0.2"
+  },
+  "dependencies": {
+    "axios": "^0.19.2",
+    "bulma": "^0.8.0"
   }
 }
